--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "angular": "~1.5.0",
     "express": "~4.13.4",
     "mongoose": "~4.4.5",
-    "body-parser": "~1.15.0"
+    "body-parser": "~1.15.0",
+    "jquery": "~2.2.1",
+    "bootstrap": "~3.3.6"
   },
   "devDependencies": {
     "babel-cli": "~6.5.1"
