--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "mongoose": "~4.4.5",
     "body-parser": "~1.15.0",
     "jquery": "~2.2.1",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "jsonwebtoken": "~5.7.0",
+    "morgan": "~1.7.0"
   },
   "devDependencies": {
     "babel-cli": "~6.5.1"
